<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/bg_ces"
    tools:context=".MainActivity"
    android:paddingTop="100dp"
    android:paddingBottom="70dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="40sp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="155dp"
        android:layout_height="155dp"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="@color/nightBlack"
        app:cardCornerRadius="250dp"
        android:backgroundTint="@color/black">

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            app:cardCornerRadius="250dp">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/profilepicture" />


        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

<!--    Textview for name from google user-->

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="13"
        android:hint="@string/name"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_marginTop="15sp"
        android:textColor="@color/black"/>


<!--    Textview for email from google user-->

    <TextView
        android:id="@+id/userEmail"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:ems="20"
        android:hint="@string/email"
        android:textAlignment="center"
        android:textSize="15sp"
        android:layout_marginTop="13sp"
        android:textColor="@color/black"
        />



    <TextView
        android:id="@+id/sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/sign_out"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        android:padding="10dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cornerRadius="10dp"
        android:text = "@string/exit"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"

        android:backgroundTint="@color/green"

        />



</LinearLayout>