<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="10dp"

    tools:context=".Authentication.Login_UI">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp">

        <ImageView
            android:id="@+id/ces_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ces"
            android:contentDescription="@string/ces_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_top"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTil"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:backgroundTint="@color/light_blue_A400">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingHorizontal="8dp"
            android:paddingVertical="12dp"
            android:hint="@string/email"
            android:inputType="textWebEmailAddress"
            android:backgroundTint="@color/light_blue_A400"
            >

        </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTil"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="20dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:backgroundTint="@color/light_blue_A400">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingHorizontal="8dp"
            android:paddingVertical="12dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:backgroundTint="@color/light_blue_A400">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:gravity="right"

        android:layout_marginTop="10dp"
        android:textColor="@color/light_blue_A400"/>








    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cornerRadius="5dp"
        android:layout_marginTop="30dp"
        android:text="@string/sign_in"
        android:padding="5dp"
        android:textColor="@color/white"
        android:enabled="false"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signInGoogle"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        app:cornerRadius="5dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/nightBlack"
        android:text = "@string/sign_in_with_google"
        android:letterSpacing="0"
        android:padding="5dp"
        android:textAllCaps="false"
        app:icon="@drawable/google"
        app:iconTint="@android:color/transparent"
        app:iconTintMode="add"
        app:iconGravity="textStart"
        style = "@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:rippleColor="@color/rippleColor"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/no_account"/>

        <TextView
            android:id="@+id/sign_up_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:paddingStart="10dp"
            android:textStyle="bold"
            android:paddingEnd="20dp"
            android:textColor="@color/light_blue_A400"
            />




    </LinearLayout>




</LinearLayout>