<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="0dp"
    android:elevation="0dp"
    app:cardBackgroundColor="@color/night_white"
    android:layout_margin="20dp"
    tools:context=".Authentication.Login_UI">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_passwor"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        android:padding="15dp">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_registered_email"

            android:layout_marginTop="20dp"
            android:textSize="15sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailForgotParent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_blue_A400"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:layout_marginTop="8dp"
            app:hintEnabled="false">


            <EditText
                android:id="@+id/emailForgot"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:backgroundTint="@color/light_blue_A400"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp"
                android:autofillHints="">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            android:gravity="end"
            android:paddingEnd="0dp">

            <Button
                android:id="@+id/emailNotSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                app:cornerRadius="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="100dp"/>

            <Button
                android:id="@+id/emailSubmit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:padding="5dp"
                android:text="@string/continueE"
                android:textColor="@color/white"
                app:cornerRadius="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"/>


        </LinearLayout>

    </LinearLayout>



</com.google.android.material.card.MaterialCardView>
