<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".Authentication.Register_UI"
    android:padding="10dp">

    <ImageView
        android:id="@+id/ces_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/ces_logo"
        android:src="@drawable/ces"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_account_top"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"


        app:cardElevation="0dp"
        app:strokeColor="@color/black"
        app:strokeWidth="0.5dp"
        app:cardCornerRadius="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="12dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fullNameTil"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fullNameEt"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:hint="@string/full_name"
                    android:layout_marginTop="5dp"
                    android:inputType="text"
                    android:textAllCaps="false">

                </com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTil"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:startIconDrawable="@drawable/ic_mail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:hint="@string/email"
                    android:inputType="textWebEmailAddress">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/rollTil"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:startIconDrawable="@drawable/ic_roll">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/rollEt"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:hint="@string/roll_number"
                    android:inputType="number"
                    >

                </com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTil"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="15dp"
                app:startIconDrawable="@drawable/ic_password">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEt"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:hint="@string/password"
                    android:inputType="textPassword">

                </com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPasswordTil"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="15dp"
                app:startIconDrawable="@drawable/ic_password">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmPasswordEt"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword">

                </com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>



    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        app:cornerRadius="5dp"
        android:text="@string/sign_up_caps"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:enabled="false"/>

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_sign_in"
        android:padding="10dp"
        android:textColor="@color/light_blue_A400"
        android:layout_marginTop="5dp"
        android:textStyle="bold"/>



</LinearLayout>

